# municipalite_web_scraper_to_markdown_conversion

./: README.md  pyproject.toml
src/municipalite_web_scraper_to_markdown_conversion/: crew.py  main.py
src/municipalite_web_scraper_to_markdown_conversion/config/: agents.yaml  tasks.yaml
