[project]
name = "municipalite_web_scraper_to_markdown_conversion"
version = "0.1.0"
description = "municipalite_web_scraper_to_markdown_conversion using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
municipalite_web_scraper_to_markdown_conversion = "municipalite_web_scraper_to_markdown_conversion.main:run"
run_crew = "municipalite_web_scraper_to_markdown_conversion.main:run"
train = "municipalite_web_scraper_to_markdown_conversion.main:train"
replay = "municipalite_web_scraper_to_markdown_conversion.main:replay"
test = "municipalite_web_scraper_to_markdown_conversion.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
